docs/0.20.1/_sources/user-guide/model-gallery/temporal/plot_linear_temporal.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/temporal/plot_linear_temporal.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_model-gallery_temporal_plot_linear_temporal.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_temporal_plot_linear_temporal.py:


.. _linear-temporal-model:

Linear temporal model
=======================

This model parametrises a linear time model.

.. math:: F(t) = alpha + beta * (t - t_{ref})

.. GENERATED FROM PYTHON SOURCE LINES 15-18

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 18-36

.. code-block:: default


    from astropy import units as u
    from astropy.time import Time
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import (
        LinearTemporalModel,
        Models,
        PowerLawSpectralModel,
        SkyModel,
    )

    time_range = [Time.now(), Time.now() + 2 * u.d]
    linear_model = LinearTemporalModel(
        alpha=1, beta=0.5 / u.d, t_ref=(time_range[0].mjd - 0.1) * u.d
    )
    linear_model.plot(time_range)
    plt.grid(which="both")




.. image-sg:: /user-guide/model-gallery/temporal/images/sphx_glr_plot_linear_temporal_001.png
   :alt: plot linear temporal
   :srcset: /user-guide/model-gallery/temporal/images/sphx_glr_plot_linear_temporal_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 37-40

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 40-49

.. code-block:: default


    model = SkyModel(
        spectral_model=PowerLawSpectralModel(),
        temporal_model=linear_model,
        name="linear-model",
    )
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: linear-model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
        temporal:
            type: LinearTemporalModel
            parameters:
            -   name: alpha
                value: 1.0
            -   name: beta
                value: 0.5
                unit: d-1
            -   name: t_ref
                value: 59747.801563595036
                unit: d
                frozen: true






.. _sphx_glr_download_user-guide_model-gallery_temporal_plot_linear_temporal.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_linear_temporal.py <plot_linear_temporal.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_linear_temporal.ipynb <plot_linear_temporal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
